# MiniJuego-OpenGL

./: CMakeLists.txt
assets/: textures
glad/include/glad/: glad.h
glad/src/: glad.c
include/: Entity.h  Escena1_Presentacion.h  Escena2_Juego.h  Escena3_Final.h  GameObject.h  Scene.h  SceneManager.h  Shader.h  Texto.h
shader/: fragment.fs  vertex.vs
src/: Entity.cpp  Escena1_Presentacion.cpp  Escena2_Juego.cpp  Escena3_Final.cpp  SceneManager.cpp  Shader.cpp  Texto.cpp  main.cpp
